--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,81 @@
+.body {
+  font-family: 'Quicksand';
+  color: #ffffff;
+  background-image:
+    linear-gradient(
+        #134d71,
+        #78a7c6,
+        #f7e4bf
+      );
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.app-name {
+  display: flex;
+  justify-content: center;
+}
+
+.output {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.output-box {
+  background-color: #ffffff;
+  height: 200px;
+  width: 650px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.message-selection {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.selection-box {
+  background-color: #ffffff;
+  height: 100px;
+  width: 500px;
+  border-radius: 10px;
+  font-family: 'sans-serif';
+  font-style: italic;
+  color: #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.affirmation {
+  display: inline;
+  padding-right: 80px;
+}
+
+.mantra {
+  display: inline;
+  padding-left: 80px;
+}
+
+.receive-message-button {
+  color: #ffffff;
+  background-color: #134d71;
+  border-radius: 5px;
+  height: 25px;
+  width: 200px;
+}
+
+
+
+
 /* font-family: 'Quicksand', sans-serif;
 COLORS
 light-yellow - #f7e4bf;
