--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
         #78a7c6,
         #f7e4bf
       );
-  min-height: 100vh;
+  min-height: 98vh;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -30,8 +30,8 @@
 
 .output-box {
   background-color: #ffffff;
-  height: 200px;
-  width: 650px;
+  height: 142px;
+  width: 60%;
   border-radius: 10px;
   display: flex;
   justify-content: center;
@@ -47,41 +47,58 @@ p {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  padding-bottom: 75px
 }
 
 .selection-box {
   background-color: #ffffff;
-  height: 100px;
-  width: 500px;
+  height: 95px;
+  width: 41%;
   border-radius: 10px;
-  font-family: 'sans-serif';
   font-style: italic;
+  font-size: 18px;
   color: #000000;
+}
+
+.message-choices {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: space-around;
+  padding-bottom: 15px;
+  padding-top: 15px;
+}
+
+.radio-button {
+  height: 20px;
+  width: 20px
 }
 
 .affirmation {
-  display: inline;
-  padding-right: 80px;
+  padding-left: 10px;
 }
 
 .mantra {
-  display: inline;
-  padding-left: 80px;
+  padding-left: 10px;
+}
+
+.receive-button-position {
+  display: flex;
+  justify-content: center;
 }
 
 .receive-message-button {
   color: #ffffff;
+  font-family: 'Quicksand';
+  font-size: 16px;
   background-color: #134d71;
   border-radius: 5px;
-  height: 25px;
-  width: 200px;
+  height: 27px;
+  width: 185px;
 }
 
-
+.footer {
+  height: 100px;
+}
 
 
 /* font-family: 'Quicksand', sans-serif;
