--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,7 @@
 
 p {
   color: #000000;
+  padding-bottom: 20px;
 }
 
 .message-selection {
@@ -68,7 +69,12 @@ p {
   padding-top: 15px;
 }
 
-.radio-button {
+.radio-affirmation {
+  height: 20px;
+  width: 20px
+}
+
+.radio-mantra {
   height: 20px;
   width: 20px
 }
