--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,7 @@
   width: 60%;
   border-radius: 10px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -100,6 +101,22 @@ p {
   border-radius: 5px;
   height: 27px;
   width: 185px;
+}
+
+/* .clear-button-position {
+  display: flex;
+  align-items: center;
+} */
+
+.clear-button {
+  color: #ffffff;
+  font-family: 'Quicksand';
+  font-size: 16px;
+  background-color: #78a7c6;
+  opacity: 90%;
+  border-radius: 5px;
+  height: 27px;
+  width: 100px;
 }
 
 .footer {
